--- a/index.html
+++ b/index.html
@@ -65,7 +65,7 @@ span2 {
 <div id="drop"></div>
 <input type="range"id="slider" class="d3-slider" margin="500" type="range" value="0" min="0" max="100" step="1")/>
 <span1 id="journee">Journée</span1>
-<!--<span2 id="saison">Saison</span2>*/-->
+<span2 id="saison">Use only on day level!</span2>
 <div id="pie"></div>
 <div id="graph"></div>    
 <form>
