Revert "Update index.html"
This reverts commit c5228080b4e9eff0819e5859c1e29ffc596112c6.

--- a/index.html
+++ b/index.html
@@ -179,7 +179,7 @@ d3.json("saison.json", function(error, saison) {
 
  function drawSunBurst(saison, currentWeek) {
 
-d3.selectAll('svg > *').remove();
+d3.selectAll('svg > g > *').remove();
 
   // Container for the tooltip.
   var tooltip = svg.append("text")
