--- a/index.html
+++ b/index.html
@@ -66,7 +66,7 @@ span2 {
 <div id="drop"></div>
 <input type="range"id="slider" class="d3-slider" margin="500" type="range" value="0" min="0" max="100" step="1")/>
 <span1 id="journee">Day</span1>
-<span2 id="info">Go back to root (journée) level of the sunburst before use!</span2>
+<span2 id="info">Only use the slider at day level of the sunburst!</span2>
 <div id="pie"></div>
 <div id="graph"></div>    
 <form>
